--- a/test/header/CMakeLists.txt
+++ b/test/header/CMakeLists.txt
@@ -1,13 +1,15 @@
-cmake_minimum_required (VERSION 3.8)
+# -----------------------------------------------------------------------------------------------------
+# Copyright (c) 2006-2021, Knut Reinert & Freie Universität Berlin
+# Copyright (c) 2016-2021, Knut Reinert & MPI für molekulare Genetik
+# This file may be used, modified and/or redistributed under the terms of the 3-clause BSD-License
+# shipped with this file and also available at: https://github.com/rrahn/lib_template/blob/master/LICENSE.md
+# -----------------------------------------------------------------------------------------------------
 
-include (seqan3_test_files)
-include (seqan3_test_component)
+cmake_minimum_required (VERSION 3.10)
+project (lib_template_header_test CXX)
 
-add_library ("${PROJECT_NAME}_header_test_lib" INTERFACE)
-target_link_libraries ("${PROJECT_NAME}_header_test_lib" INTERFACE "${PROJECT_NAME}_interface" gtest gtest_main)
-target_include_directories ("${PROJECT_NAME}_header_test_lib" INTERFACE "${SEQAN3_TEST_CLONE_DIR}/googletest/include/")
-# SeqAn3 script adds an include for <bechmark/benchmark.h>
-target_include_directories ("${PROJECT_NAME}_header_test_lib" INTERFACE ./dummy_include)
+include (../cmake/lib_template-test.cmake)
+
 set (target "header_test")
 
 set (header_base_path "${CMAKE_CURRENT_LIST_DIR}/../../include/")
@@ -16,7 +18,7 @@ file (GLOB_RECURSE header_files RELATIVE "${header_base_path}" "${header_base_pa
 
 file (WRITE "${PROJECT_BINARY_DIR}/${target}.cpp" "")
 add_executable (${target} ${PROJECT_BINARY_DIR}/${target}.cpp)
-target_link_libraries (${target} ${PROJECT_NAME}_header_test_lib)
+target_link_libraries (${target} seqan::lib_template::test::header)
 add_test (NAME "header/${target}" COMMAND ${target})
 
 foreach (header ${header_files})
@@ -36,26 +38,30 @@ foreach (header ${header_files})
                                     "-DHEADER_FILE_INCLUDE=${header}"
                                     "-DHEADER_TARGET_SOURCE=${header_target_source}"
                                     "-DHEADER_TEST_NAME_SAFE=${header_test_name_safe}"
-                                    "-DHEADER_COMPONENT=${PROJECT_NAME}"
+                                    "-DHEADER_COMPONENT=lib_template"
                                     "-DHEADER_SUB_TEST=${header_sub_test}"
                                     "-P"
-                                    "${SEQAN3_CLONE_DIR}/test/header/generate_header_source.cmake"
+                                    "${LIB_TEMPLATE_CLONE_DIR}/lib/seqan3/test/header/generate_header_source.cmake"
                             DEPENDS "${header_base_path}/${header}"
-                                    "${SEQAN3_CLONE_DIR}/test/header/generate_header_source.cmake")
+                                    "${LIB_TEMPLATE_CLONE_DIR}/lib/seqan3/test/header/generate_header_source.cmake")
 
         add_library (${header_target} OBJECT "${header_target_source}")
 
-        # NOTE: a simple target_link_libraries (${header_target} ${PROJECT_NAME}_header_test_lib)
+        # NOTE: a simple target_link_libraries (${header_target} seqan::lib_template::test::header)
         # is not possible for OBJECT libraries before cmake 3.12
         if (CMAKE_VERSION VERSION_LESS 3.12)
-            target_compile_options (${header_target} PRIVATE $<TARGET_PROPERTY:${PROJECT_NAME}_header_test_lib,INTERFACE_COMPILE_OPTIONS>)
-            target_compile_definitions (${header_target} PRIVATE $<TARGET_PROPERTY:${PROJECT_NAME}_header_test_lib,INTERFACE_COMPILE_DEFINITIONS>)
-            target_include_directories (${header_target} PRIVATE $<TARGET_PROPERTY:${PROJECT_NAME}_header_test_lib,INTERFACE_INCLUDE_DIRECTORIES>)
-            add_dependencies (${header_target} "${PROJECT_NAME}_interface" gtest gtest_main)
+            target_compile_options (${header_target} PRIVATE $<TARGET_PROPERTY:seqan::lib_template::test::header,INTERFACE_COMPILE_OPTIONS>)
+            target_compile_definitions (${header_target} PRIVATE $<TARGET_PROPERTY:seqan::lib_template::test::header,INTERFACE_COMPILE_DEFINITIONS>)
+            target_include_directories (${header_target} PRIVATE $<TARGET_PROPERTY:seqan::lib_template::test::header,INTERFACE_INCLUDE_DIRECTORIES>)
+            add_dependencies (${header_target} "seqan::lib_template::test::header" gtest gtest_main)
         else ()
-            target_link_libraries (${header_target} ${PROJECT_NAME}_header_test_lib)
+            target_link_libraries (${header_target} seqan::lib_template::test::header)
         endif ()
 
         target_sources (${target} PRIVATE $<TARGET_OBJECTS:${header_target}>)
     endforeach ()
 endforeach ()
+
+seqan3_require_ccache ()
+seqan3_require_benchmark ()
+seqan3_require_test ()
