--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -94,17 +94,17 @@ jobs:
           env cmake --version
           env ${{ matrix.cxx }} --version
 
-      - name: Configure tests
+      - name: Configure unit tests
         env:
           CXX: ${{ matrix.cxx }}
           CC: ${{ matrix.cc }}
         run: |
           mkdir build
           cd build
-          cmake ../${{ env.REPOSITORY_NAME }} -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-                                              -DCMAKE_CXX_FLAGS="${{ matrix.cxx_flags }}"
+          cmake ../${{ env.REPOSITORY_NAME }}/test/unit -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+                                                        -DCMAKE_CXX_FLAGS="${{ matrix.cxx_flags }}"
 
-      - name: Build application
+      - name: Build unit tests
         env:
           CCACHE_BASEDIR: ${{ github.workspace }}
           CCACHE_DIR: ${{ github.workspace }}/.ccache
@@ -115,19 +115,6 @@ jobs:
           ccache -p || true
           cd build
           make -k -j2
-          ccache -s || true
-
-      - name: Build tests
-        env:
-          CCACHE_BASEDIR: ${{ github.workspace }}
-          CCACHE_DIR: ${{ github.workspace }}/.ccache
-          CCACHE_COMPRESS: true
-          CCACHE_COMPRESSLEVEL: 6
-          CCACHE_MAXSIZE: 500M
-        run: |
-          ccache -p || true
-          cd build
-          make -k -j2 api_test cli_test
           ccache -s || true
 
       - name: Generate coverage baseline
