--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -82,7 +82,7 @@ jobs:
           env cmake --version
           env ${{ matrix.cxx }} --version
 
-      - name: Configure unit tests
+      - name: Configure tests
         env:
           CXX: ${{ matrix.cxx }}
           CC: ${{ matrix.cc }}
@@ -92,7 +92,7 @@ jobs:
           cmake ../${{ env.REPOSITORY_NAME }}/test/unit -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
                                                         -DCMAKE_CXX_FLAGS="${{ matrix.cxx_flags }}"
 
-      - name: Build unit tests
+      - name: Build tests
         env:
           CCACHE_BASEDIR: ${{ github.workspace }}
           CCACHE_DIR: ${{ github.workspace }}/.ccache
