--- a/test/benchmark/affine/CMakeLists.txt
+++ b/test/benchmark/affine/CMakeLists.txt
@@ -1,2 +1,3 @@
 pairwise_aligner_benchmark (alignment_global_affine_benchmark.cpp)
 pairwise_aligner_benchmark (alignment_global_affine_simd_benchmark.cpp)
+pairwise_aligner_benchmark (alignment_global_affine_simd_saturated_benchmark.cpp)
