[FEATURE] Add fixed simd local affine alignment.

--- a/test/unit/affine/CMakeLists.txt
+++ b/test/unit/affine/CMakeLists.txt
@@ -10,4 +10,5 @@ pairwise_aligner_test (global_semi_second_affine_scalar_test)
 pairwise_aligner_test (global_standard_affine_fixed_simd_test)
 pairwise_aligner_test (global_standard_affine_saturated_simd_test)
 pairwise_aligner_test (global_standard_affine_scalar_test)
+pairwise_aligner_test (local_affine_fixed_simd_test)
 pairwise_aligner_test (local_affine_scalar_test)
