--- a/test/unit/affine/CMakeLists.txt
+++ b/test/unit/affine/CMakeLists.txt
@@ -11,4 +11,5 @@ pairwise_aligner_test (global_standard_affine_fixed_simd_test)
 pairwise_aligner_test (global_standard_affine_saturated_simd_test)
 pairwise_aligner_test (global_standard_affine_scalar_test)
 pairwise_aligner_test (local_affine_fixed_simd_test)
+pairwise_aligner_test (local_affine_saturated_simd_test)
 pairwise_aligner_test (local_affine_scalar_test)
