--- a/test/benchmark/affine/CMakeLists.txt
+++ b/test/benchmark/affine/CMakeLists.txt
@@ -1,6 +1,7 @@
 pairwise_aligner_benchmark (alignment_global_affine_benchmark.cpp)
 pairwise_aligner_benchmark (alignment_global_affine_matrix_benchmark.cpp)
 pairwise_aligner_benchmark (alignment_global_affine_simd_benchmark.cpp)
+pairwise_aligner_benchmark (alignment_global_affine_simd_matrix_benchmark.cpp)
 pairwise_aligner_benchmark (alignment_global_affine_simd_saturated_benchmark.cpp)
 pairwise_aligner_benchmark (alignment_local_affine_benchmark.cpp)
 pairwise_aligner_benchmark (alignment_local_affine_matrix_benchmark.cpp)
