--- a/test/unit/affine/CMakeLists.txt
+++ b/test/unit/affine/CMakeLists.txt
@@ -7,8 +7,10 @@ pairwise_aligner_test (global_semi_first_affine_scalar_test)
 pairwise_aligner_test (global_semi_second_affine_fixed_simd_test)
 pairwise_aligner_test (global_semi_second_affine_saturated_simd_test)
 pairwise_aligner_test (global_semi_second_affine_scalar_test)
+pairwise_aligner_test (global_standard_affine_fixed_simd_matrix_test)
 pairwise_aligner_test (global_standard_affine_fixed_simd_test)
 pairwise_aligner_test (global_standard_affine_saturated_simd_test)
+pairwise_aligner_test (global_standard_affine_scalar_matrix_test)
 pairwise_aligner_test (global_standard_affine_scalar_test)
 pairwise_aligner_test (local_affine_fixed_simd_test)
 pairwise_aligner_test (local_affine_saturated_simd_test)
