--- a/test/unit/simd/CMakeLists.txt
+++ b/test/unit/simd/CMakeLists.txt
@@ -1,2 +1,3 @@
 pairwise_aligner_test (simd_index_map_test)
+pairwise_aligner_test (simd_selector_avx2_test)
 pairwise_aligner_test (simd_score_saturated_test)
