Modernize linux CI for building and running unit tests

--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -1,140 +1,85 @@
-name: CI on Linux
+# SPDX-FileCopyrightText: 2006-2024 Knut Reinert & Freie Universität Berlin
+# SPDX-FileCopyrightText: 2016-2024 Knut Reinert & MPI für molekulare Genetik
+# SPDX-License-Identifier: CC0-1.0
+
+name: Linux
 
 on:
   push:
-    branches:
-      # Push events to branches matching refs/heads/master
-      - 'master'
   pull_request:
+  workflow_dispatch:
+
+concurrency:
+  group: linux-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: ${{ github.event_name != 'push' }}
 
 env:
-  CMAKE_VERSION: 3.10.3
-  SEQAN3_NO_VERSION_CHECK: 1
   TZ: Europe/Berlin
 
 defaults:
   run:
-    shell: bash -ex {0}
+    shell: bash -Eeuxo pipefail {0}
 
 jobs:
   build:
     name: ${{ matrix.name }}
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 120
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         include:
-          - name: "Coverage gcc11"
-            cxx: "g++-11"
-            cc: "gcc-11"
-            build: coverage
-            build_type: Debug
+          # - name: "clang17"
+          #   compiler: "clang-17"
+          #   build_type: Release
+          #   cxx_flags: "-stdlib=libc++"
+
+          - name: "gcc13"
+            compiler: "gcc-13"
+            build_type: RelWithDebInfo
+            cxx_flags: "-std=c++23"
+
+          - name: "gcc12"
+            compiler: "gcc-12"
+            build_type: RelWithDebInfo
 
           - name: "gcc11"
-            cxx: "g++-11"
-            cc: "gcc-11"
-            build: unit
-            build_type: Release
-
-          - name: "gcc10"
-            cxx: "g++-10"
-            cc: "gcc-10"
-            build: unit
-            build_type: Release
-
-          - name: "gcc9 (c++2a)"
-            cxx: "g++-9"
-            cc: "gcc-9"
-            build: unit
-            build_type: Release
-            cxx_flags: "-std=c++2a"
+            compiler: "gcc-11"
+            build_type: RelWithDebInfo
 
     steps:
-      - name: Set repository name
-        run: echo "REPOSITORY_NAME=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
-
-      - name: Repository name as upper case
-        run: echo "CMAKE_REPOSITORY_NAME=$(echo ${{ env.REPOSITORY_NAME }} | tr '[:lower:]' '[:upper:]')" >> $GITHUB_ENV
-
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
-          path: ${{ env.REPOSITORY_NAME }}
-          fetch-depth: 2
-          submodules: recursive
+          submodules: "recursive"
 
-      - name: Add package source
-        run: bash ./${{ env.REPOSITORY_NAME }}/lib/seqan3/.github/workflows/scripts/configure_apt.sh
+      - name: Setup toolchain
+        uses: seqan/actions/setup-toolchain@main
+        with:
+          compiler: ${{ matrix.compiler }}
+          ccache_size: 75M
 
       - name: Install CMake
-        run: bash ./${{ env.REPOSITORY_NAME }}/lib/seqan3/.github/workflows/scripts/install_cmake.sh
-
-      - name: Install ccache
-        run: sudo apt-get install --yes ccache
-
-      - name: Install compiler ${{ matrix.cxx }}
-        run: sudo apt-get install --yes ${{ matrix.cxx }}
-
-      - name: Install gcovr
-        if: matrix.build == 'coverage'
-        env:
-          CC: ${{ matrix.cc }}
-        run: |
-          sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/${CC/gcc/gcov} 100
-          pip install gcovr
-
-      - name: Load ccache
-        uses: actions/cache@v2
+        uses: seqan/actions/setup-cmake@main
         with:
-          path: .ccache
-          key: ${{ runner.os }}-${{ matrix.name }}-ccache-${{ github.ref }}-${{ github.run_number }}
-          # Restoring: From current branch, otherwise from base branch, otherwise from any branch.
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.name }}-ccache-${{ github.ref }}
-            ${{ runner.os }}-${{ matrix.name }}-ccache-${{ github.base_ref }}
-            ${{ runner.os }}-${{ matrix.name }}-ccache-
+          cmake: 3.25.3
 
-      - name: Tool versions
-        run: |
-          env cmake --version
-          env ${{ matrix.cxx }} --version
-
-      - name: Configure tests
-        env:
-          CXX: ${{ matrix.cxx }}
-          CC: ${{ matrix.cc }}
+      - name: Configure
         run: |
           mkdir build
           cd build
-          cmake ../${{ env.REPOSITORY_NAME }}/test/${{ matrix.build }} \
-            -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-            -DCMAKE_CXX_FLAGS="${{ matrix.cxx_flags }}" \
-            -D${{ env.CMAKE_REPOSITORY_NAME }}_COVERAGE_PARALLEL_LEVEL=2
+          cmake ../test/unit -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+                             -DCMAKE_CXX_FLAGS="${{ matrix.cxx_flags }}" \
+                             -DSEQAN3_VERBOSE_TESTS=OFF
 
       - name: Build tests
-        env:
-          CCACHE_BASEDIR: ${{ github.workspace }}
-          CCACHE_DIR: ${{ github.workspace }}/.ccache
-          CCACHE_COMPRESS: true
-          CCACHE_COMPRESSLEVEL: 6
-          CCACHE_MAXSIZE: 500M
-          GCOV: ${{ github.workspace }}/${{ env.REPOSITORY_NAME }}/lib/seqan3/.github/workflows/scripts/gcov.sh
         run: |
-          ccache -p || true
+          ccache -z
           cd build
           make -k -j2
-          ccache -s || true
+          ccache -sv
 
       - name: Run tests
-        if: matrix.build != 'coverage'
         run: |
           cd build
           ctest . -j2 --output-on-failure
-
-      - name: Submit coverage report
-        if: matrix.build == 'coverage'
-        uses: codecov/codecov-action@v2
-        with:
-          files: ${{ github.workspace }}/build/${{ env.REPOSITORY_NAME }}_coverage.xml
-          root_dir: ${{ github.workspace }}/${{ env.REPOSITORY_NAME }}
