Adds ".cpp" extension to all test definitions in cmake.
This fixes the warning that the source file extension must be known when adding the target in cmake.

--- a/test/unit/simd/CMakeLists.txt
+++ b/test/unit/simd/CMakeLists.txt
@@ -1,3 +1,3 @@
-pairwise_aligner_test (simd_index_map_test)
-pairwise_aligner_test (simd_selector_avx2_test)
-pairwise_aligner_test (simd_score_saturated_test)
+pairwise_aligner_test (simd_index_map_test.cpp)
+pairwise_aligner_test (simd_selector_avx2_test.cpp)
+pairwise_aligner_test (simd_score_saturated_test.cpp)
