--- a/test/unit/configuration/CMakeLists.txt
+++ b/test/unit/configuration/CMakeLists.txt
@@ -1,2 +1,2 @@
-pairwise_aligner_test (configuration_test)
-pairwise_aligner_test (configure_aligner_saturated_test)
+pairwise_aligner_test (configuration_test.cpp)
+pairwise_aligner_test (configure_aligner_saturated_test.cpp)
