--- a/test/unit/score_model/CMakeLists.txt
+++ b/test/unit/score_model/CMakeLists.txt
@@ -1,2 +1,2 @@
-pairwise_aligner_test (score_model_matrix_simd_1xN_test)
-pairwise_aligner_test (score_model_matrix_simd_NxN_test)
+pairwise_aligner_test (score_model_matrix_simd_1xN_test.cpp)
+pairwise_aligner_test (score_model_matrix_simd_NxN_test.cpp)
