--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -24,64 +24,59 @@ defaults:
 
 jobs:
   build:
-    name: ${{ matrix.name }}
+    name: ${{ matrix.compiler }}/SIMD-${{ matrix.SIMD-ISA }}
     runs-on: ubuntu-22.04
     timeout-minutes: 120
     strategy:
       fail-fast: false
       matrix:
+        compiler: ["gcc-11", "gcc-12", "gcc-13"]
+        SIMD-ISA: ["native"]
         include:
-          # - name: "clang17"
-          #   compiler: "clang-17"
-          #   build_type: Release
-          #   cxx_flags: "-stdlib=libc++"
-
-          - name: "gcc13"
-            compiler: "gcc-13"
-            build_type: RelWithDebInfo
-            cxx_flags: "-std=c++23"
-
-          - name: "gcc12"
-            compiler: "gcc-12"
-            build_type: RelWithDebInfo
-
-          - name: "gcc11"
-            compiler: "gcc-11"
-            build_type: RelWithDebInfo
-
+          - compiler: "gcc-13"
+            SIMD-ISA: "none"
+          - compiler: "gcc-13"
+            SIMD-ISA: "SSE4"
+          - compiler: "gcc-13"
+            SIMD-ISA: "AVX2"
+          - compiler: "gcc-13"
+            SIMD-ISA: "AVX512BW"
+          - compiler: "gcc-13"
+            SIMD-ISA: "AVX512VBMI"
+    container:
+      image: ghcr.io/seqan/${{ matrix.compiler }}
+      volumes:
+        - /home/runner:/home/runner
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           submodules: "recursive"
 
-      - name: Setup toolchain
-        uses: seqan/actions/setup-toolchain@main
+      - name: Load ccache
+        uses: actions/cache@v4
         with:
-          compiler: ${{ matrix.compiler }}
-          ccache_size: 75M
-
-      - name: Install CMake
-        uses: seqan/actions/setup-cmake@main
-        with:
-          cmake: 3.25.3
+          path: /home/runner/.ccache
+          save-always: true
+          key: ccache-${{ runner.os }}-${{ github.workflow }}-${{ matrix.compiler }}-${{ github.ref }}-${{ github.run_id }}
+          restore-keys: |
+            ccache-${{ runner.os }}-${{ github.workflow }}-${{ matrix.compiler }}-${{ github.ref }}
+            ccache-${{ runner.os }}-${{ github.workflow }}-${{ matrix.compiler }}
 
       - name: Configure
         run: |
           mkdir build
           cd build
-          cmake ../test/unit -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-                             -DCMAKE_CXX_FLAGS="${{ matrix.cxx_flags }}" \
-                             -DSEQAN3_VERBOSE_TESTS=OFF
+          cmake ../test/unit -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+                             -DPAIRWISE_ALIGNER_SIMD_ISA=${{ matrix.SIMD-ISA }} \
 
       - name: Build tests
+        working-directory: build
         run: |
           ccache -z
-          cd build
-          make -k -j2
+          make -k -j
           ccache -sv
 
       - name: Run tests
-        run: |
-          cd build
-          ctest . -j2 --output-on-failure
+        working-directory: build
+        run: ctest . -j --output-on-failure
